# visual-scout

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: development.md
pip-wheel-metadata/visual_scout-0.1.0.dist-info/: LICENSE  METADATA  top_level.txt
tests/: test_extract_frames.py  test_extract_labels.py  test_extract_visual_content.py  test_generate_grids.py  test_image_utils.py  test_video_utils.py
tests/fixtures/example_input_dir_short/: random.txt
tests/fixtures/output/example_output_labels/example_video_horizontal__frames__grids/: example_video_horizontal__visual_content.json  visual_content_0-00-00_0-00-18.json  visual_content_0-00-18_0-00-28.json
tests/fixtures/output/example_output_labels/example_video_vertical__frames__grids/: example_video_vertical__visual_content.json  visual_content_0-00-00_0-00-18.json  visual_content_0-00-18_0-00-36.json  visual_content_0-00-36_0-00-40.json
tests/fixtures/output/output_visual_content/example_video_horizontal__frames__grids/: example_video_horizontal__frames__grids.json  (+2 more)
visual_scout/: cli.py  constants.py  estimate_processing_cost.py  extract_frames.py  extract_labels.py  extract_visual_content.py  frame_utils.py  generate_grids.py  generate_grids_from_source.py  image_utils.py  io_utils.py  openai_utils.py  video_utils.py
visual_scout/example_input/: random.txt
visual_scout/example_videos/: invalid_video.mov
visual_scout/utils/: frame_utils.py  gif_utils.py  grid_utils.py  image_utils.py  media_utils.py  openai_utils.py  video_utils.py
(+4 files in other folders)
