[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "visual-scout"
version = "0.1.0"
description = "A tool for extracting information from videos and images."
authors = [{ name = "Paige Moody"}]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "opencv-python",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
]

[tool.setuptools]
packages = ["visual_scout"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
