[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "visual-scout"
version = "0.1.0"
description = "A tool for extracting information from videos and images."
authors = [{ name = "Paige Moody"}]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "dotenv",
    "numpy>=1.26",
    "opencv-python==4.10.0.84",
    "pillow==10.4.0",
    "openai>=1.59.8",
    "python-dotenv==1.0.1",
    "pytest==8.3.4",
    "black",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
]

[project.scripts]
visual-scout = "visual_scout.cli:main"

[tool.setuptools.packages.find]
include = ["visual_scout*"]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
